Table universities {
  id uuid [pk, increment]
  name nvarchar [not null]
  city nvarchar
  website nvarchar
  created_at datetime
}

Table allowed_email_domains { 
  id uuid [pk, increment]
  university_id uuid [not null, ref: > universities.id]
  domain nvarchar [not null]

  indexes {
    (university_id, domain) [unique, name: 'uq_uni_domain']
  }
}

Table faculties {
  id uuid [pk, increment]
  university_id uuid [not null, ref: > universities.id]
  name nvarchar [not null]
  created_at datetime
}

// Table departments {
//   id uuid [pk, increment]
//   faculty_id uuid [not null, ref: > faculties.id]
//   name nvarchar [not null]
//   created_at datetime
// }

Table teachers {
  id uuid [pk, increment]
  // department_id uuid [not null, ref: > departments.id]
  full_name nvarchar [not null]
  created_at datetime
}

Table courses {
  id uuid [pk, increment]
  // department_id uuid [not null, ref: > departments.id]
  title nvarchar [not null]
  code nvarchar
  created_at datetime
}

Table course_offerings { 
  id uuid [pk, increment]
  course_id uuid [not null, ref: > courses.id]
  faculty_id uuid [ref: > faculties.id] 
  // semester nvarchar
  // year interger
  created_at datetime
}

Table course_offering_teachers {
  course_offering_id uuid [not null, ref: > course_offerings.id]
  teacher_id uuid [not null, ref: > teachers.id]

  indexes {
    (course_offering_id, teacher_id) [unique, name: 'PK']
    (teacher_id)                      [name: 'idx_cot_teacher']
  }
}

Table users { 
  id uuid [pk, increment]
  university_id uuid [not null, ref: > universities.id]
  email_hash nvarchar [not null, unique, note: 'pseudonymous key (salted hash of email)']
  email_confirmed bool
  created_at datetime
}

Table abuse_report_codes {
  code nvarchar [pk]
  description text
}

// Table magic_link_tokens {
//   id uuid [pk, increment]
//   user_id uuid [ref: > users.id, note: 'nullable until confirmed']
//   email nvarchar [note: 'store hashed/encrypted if possible']
//   token nvarchar [not null, unique]
//   expires_at datetime
//   used_at datetime
//   created_at datetime
// }

// Enum review_category {
//   UNIVERSITY
//   FACULTY
//   TEACHER
//   COURSE
//   COURSE_OFFERING
// }

Table reviews {
  id uuid [pk, increment]
  rating_overall smallint
  body text       [note: 'review text']
  created_at datetime

  indexes {
    (created_at) [name: 'idx_reviews_created_at']
  }
}

Table university_reviews {
  review_id uuid [pk, ref: > reviews.id]
  university_id uuid [not null, ref: > universities.id]

  indexes {
    (university_id) [name: 'idx_university_reviews_university']
  }
}

Table faculty_reviews {
  review_id uuid [pk, ref: > reviews.id]
  faculty_id uuid [not null, ref: > faculties.id]

  indexes {
    (faculty_id) [name: 'idx_faculty_reviews_faculty']
  }
}

Table teacher_reviews {
  review_id uuid [pk, ref: > reviews.id]
  teacher_id uuid [not null, ref: > teachers.id]

  indexes {
    (teacher_id) [name: 'idx_teacher_reviews_teacher']
  }
}

Table course_reviews {
  review_id uuid [pk, ref: > reviews.id]
  course_id uuid [not null, ref: > courses.id]

  indexes {
    (course_id) [name: 'idx_course_reviews_course']
  }
}

Table course_offering_reviews {
  review_id uuid [pk, ref: > reviews.id]
  course_offering_id uuid [not null, ref: > course_offerings.id]

  indexes {
    (course_offering_id) [name: 'idx_co_reviews_course_offering']
  }
}

Table review_criteria {
  code nvarchar [pk]          
  name nvarchar [not null]    
  description nvarchar        
}


Table review_ratings {
  id uuid [pk, increment]

  review_id uuid [not null, ref: > reviews.id]
  criterion_code nvarchar [not null, ref: > review_criteria.code, note: 'e.g. TEACHING_QUALITY, WORKLOAD']
  value smallint [not null]

  indexes {
    (review_id)      [name: 'idx_review_ratings_review']
    (criterion_code) [name: 'idx_review_ratings_criterion']
  }
}

Table abuse_reports {
  id uuid [pk, increment]
  review_id uuid [not null, ref: > reviews.id]
  reporter_user_id uuid [ref: > users.id, not null]
  reason_code nvarchar [not null]
  details text
  status nvarchar [not null]
  created_at datetime [not null]
}

Table abuse_report_statuses {
  name nvarchar [pk]
  description nvarchar
}

Ref: "abuse_report_codes"."code" < "abuse_reports"."reason_code"

Ref: "abuse_report_statuses"."name" < "abuse_reports"."status"